# sdl-game

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  shell.nix
src/: CMakeLists.txt  main.cpp
src/entity/: entity.hpp
